Java 14: switch expression and pattern matching for instanceof